Cambio de bg y optimizaciones minimas

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mifar",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass --watch scss/style.scss css/styleBootstrap.css"
@@ -16,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/AgustinScarafioca/Mifar/issues"
   },
-  "homepage": "https://github.com/AgustinScarafioca/Mifar#readme"
+  "homepage": "https://github.com/AgustinScarafioca/Mifar#readme",
+  "description": ""
 }
